<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yousef.seniorproject_cpit499.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Log In"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="187dp"
                tools:layout_editor_absoluteY="23dp" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="79dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="114dp"
                tools:layout_editor_absoluteY="147dp" />

            <Button
                android:id="@+id/logInBot"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginBottom="20dp"
                android:onClick="login"
                android:text="Log in"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="130dp"
                tools:layout_editor_absoluteY="226dp" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Don't have an account?  Sign Up"
                android:textAlignment="center"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="298dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
