...
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="183dp"
        android:layout_marginStart="183dp"
        android:layout_marginTop="16dp"
        android:text="Cart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
...
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="32dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/proceedToCheckout_button" />

    <Button
        android:id="@+id/proceedToCheckout_button"
        android:layout_width="177dp"
        android:layout_height="62dp"
        android:layout_marginBottom="24dp"
...
