<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yousef.seniorproject_cpit499.SignUpActivity"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none|vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:text="Sign Up"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="143dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="User Name"
                android:inputType="textPersonName"
                android:singleLine="false"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="66dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="112dp" />

            <EditText
                android:id="@+id/confirmEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="Confirm Email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="219dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="289dp" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="358dp" />

            <Button
                android:id="@+id/registerBot"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:onClick="register"
                android:text="Register"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="130dp"
                tools:layout_editor_absoluteY="428dp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
